implement login with SUDIR auth code
